--- a/index.ipynb
+++ b/index.ipynb
@@ -311,13 +311,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "None"
+    "None\n"
    ]
   },
   {
